--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,10 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39707.20788468138!2d-0.3766408638407363!3d51.53705303777917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487612f29e2f501b%3A0x922c55abc4e47232!2sGreenford!5e0!3m2!1sen!2suk!4v1536952011290" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   
   <form action="#" method="post">
-    <label>Name</label>
+    <label for="fullname">Name</label>
     <input type="text"id="fullname" name="fullname" placeholder="your name" required>
-    </label>
+    <label for="email">Email</label>
+    <input type="email" id="email"
   </form>
   
 </body>
