--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,10 @@
     <label for="fullname">Name</label>
     <input type="text"id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
-    <input type="email" id="email"
+    <input type="email" id="email" name="email" placeholder="youremail" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
   </form>
   
 </body>
